# 0g-halo2

./: .gitignore  Cargo.toml  LICENSE  README.md  test_cli.sh
.github/workflows/: rust.yml
benches/: bench.rs  proof.rs
examples/: evm-verifier.rs
models/: copy_mnist_models.sh  iris_2input_128entry_1hash_3bpi.hdf5  model_28input_1024entry_2hash_2bpi.hdf5  model_28input_2048entry_2hash_3bpi.hdf5  model_28input_256entry_1hash_1bpi.pickle.hdf5  readme.md
src/: bloom_filter.rs  eth.rs  gadgets.rs  io.rs  lib.rs  main.rs  utils.rs  wnn.rs
src/eth/: deploy.rs  vanilla_plonk_circuit.rs
src/gadgets/: bit_selector.rs  bits2num.rs  bloom_filter.rs  bloom_filter_old.rs  byte_selector.rs  encode_image.rs  greater_than.rs  hash.rs  range_check.rs  response_accumulator.rs  select_ith_byte.rs  wnn.rs
src/gadgets/bloom_filter/: and_bits.rs  array_lookup.rs  bit_selector.rs  byte_selector.rs  single_bit_bloom_filter.rs
src/io/: image.rs  model.rs
tests/: integration_test.rs  using_zero_g_as_a_library.rs
