[package]
name = "zero_g"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "zk-SNARKs for weightless neural networks (WNNs)."
repository = "https://github.com/zkp-gravity/0g-halo2"
readme = "README.md"

[lib]
name = "zero_g"
path = "src/lib.rs"

[patch.'https://github.com/privacy-scaling-explorations/halo2curves']
# We need version 0.3.3 of halo2curves, specifically the changes of: https://github.com/privacy-scaling-explorations/halo2curves/pull/40
# Since it is backward-compatible to version 0.3.2 (which is used by halo2), we can patch it here.
# Once halo2_proofs, halo2_gadgets and snark-verifier update to the next version of halo2curves, we can remove this patch.
halo2curves = { git = 'https://github.com/privacy-scaling-explorations//halo2curves', tag = "0.3.3" }

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20", features = [
    "dev-graph",
    "circuit-params",
] }
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20" }
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.3", features = [
    "derive_serde",
] }

plotters = { version = "0.3.0" }
num-bigint = "0.4.3"
hdf5 = "0.8.1"
ndarray = "0.15.6"
ff = "0.13.0"
rand_core = "0.6.4"
image = "0.24.6"
clap = { version = "4.2.7", features = ["derive"] }
indicatif = "0.17.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"

# For the evm-verifier example
snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier", tag = "v2023_04_20" }
rand = "0.8.5"
itertools = "0.10.5"
ethers = "2.0.7"
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
eyre = "0.6.8"
hex = "0.4.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
